samples/_failures_safe/1761694378_ebbd55_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91fba6f7.c: In function ‘main’:
./samples/SAFE/__tmp_91fba6f7.c:138:12: error: missing terminating " character
  138 |     printf("Original magnitude: %.3
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_91fba6f7.c:138:5: error: expected expression at end of input
  138 |     printf("Original magnitude: %.3
      |     ^~~~~~
./samples/SAFE/__tmp_91fba6f7.c:138:5: error: expected declaration or statement at end of input
